<resources>
    <string name="app_name" translatable="false">Insta Salary</string>

    <string name="next" translatable="false">NEXT</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="start" translatable="false">Done</string>

    <string name="slide_1_title" translatable="false">Cash Crunch</string>
    <string name="slide_1_sub_title">IN Emegencies ?</string>
    <string name="slide_1_desc">Your advance salary is just a tap a way and repay us in 30 days</string>

    <string name="slide_2_title">PLANNING FOR</string>
    <string name="slide_2_sub_title">A HOLIDAY ?</string>
    <string name="slide_2_desc">Your advance salary is just a tap a way and repay us in 30 days</string>

    <string name="slide_3_title">WHY WAIT FOR</string>
    <string name="slide_3_sub_title">SALARY ?</string>
    <string name="slide_3_desc">Your advance salary is just a tap a way and repay us in 30 days</string>
    <string name="preview_area">preview area</string>
    <string name="todo">TODO</string>
    <string name="message_no_storage_permission_snackbar">Location Permission Denied</string>
    <string name="settings">Settings</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="get_otp" translatable="false">Get OTP</string>
    <string name="proceedForward">Our App Requires These permissions. \n\n Please Allow these permissions for the app to proceed forward..</string>

    <string-array name="state_array">
        <item>-- Select State --</item>
        <item>andhra pradesh</item>
        <item>Telangana</item>
    </string-array>

    <string-array name="city_array">
        <item>-- Select City --</item>
        <item>Hyderabad</item>
        <item>Secunderabad</item>
        <item>Warangal</item>
        <item>Nizamabad</item>
        <item>Khammam</item>
        <item>Karimnagar</item>
        <item>Ramagundam</item>
        <item>Mahabubnagar</item>
        <item>Nalgonda</item>
        <item>Adilabad</item>
        <item>Suryapet</item>
        <item>Miryalaguda</item>
        <item>Jagtial</item>
        <item>Vikarabad</item>
        <item>Jangaon</item>
        <item>Bhadrachalam</item>
        <item>Wanaparthy</item>
        <item>Gadwal</item>
    </string-array>

    <string-array name="housetype">
        <item>-- Select HouseType --</item>
        <item>Rented</item>
        <item>Own</item>
        <item>Lease</item>
    </string-array>

    <string-array name="vendor">
        <item>--Select Vendor--</item>
        <item>Kushal</item>
        <item>Gopi</item>
        <item>pruthvee</item>
        <item>anjireddy</item>
    </string-array>

</resources>
