<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginmainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_width="114dp"
            android:layout_height="80dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/instalogo" />

        <LinearLayout
            android:id="@+id/llfirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:paddingStart="5dp"
                android:text="@string/enter_phone_number"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat"
                tools:paddingRight="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="48dp"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:digits="1234567890"
                    android:id="@+id/enterphoneno_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat"
                    android:inputType="phone"
                    android:maxLength="14"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/loginbottombutton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="#36000000">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="center"
                    android:text="@string/get_otp"
                    android:textColor="#fff"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:padding="10dp"
                    android:src="@drawable/next" />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:paddingLeft="5dp"
                android:text="Enter OTP"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat"
                tools:paddingRight="5dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp">

                <TextView
                    android:id="@+id/mynumbertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/changenumberlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Change"
                    android:textColor="#03A9F4"
                    android:textSize="14dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="60dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <EditText
                    android:id="@+id/et1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:padding="20dp"
                    android:textColor="#000"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/et2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:padding="20dp"
                    android:textColor="#000"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/et3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:padding="20dp"
                    android:textColor="#000"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/et4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:padding="20dp"
                    android:textColor="#000"
                    android:textSize="17dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="Resend OTP"
                android:textColor="#03A9F4"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/loader_login"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.crystal.crystalpreloaders.widgets.CrystalPreloader
            android:layout_margin="15dp"
            android:layout_centerInParent="true"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:crs_pl_style="skype_balls"
            app:crs_pl_size="very_small"
            app:crs_pl_fg_color="@color/instapink"
            app:crs_pl_bg_color="#fff"/>

    </androidx.cardview.widget.CardView>



</RelativeLayout>